assets/css/main.css
/*----------------------------------------
  Global
  ---------------------------------------- */
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

html {
  color: #555;
  font-family: "Roboto", sans-serif;
  font-size: 20px;
}

body {
  align-items: center;
  background-color: rgb(247, 234, 211);
  justify-content: left;
  text-align: left;
  width: 100vw;
}

a {
  color: rgb(37, 37, 172);
}

a:active {
  opacity: 0.5;
}

ul {
  list-style: square;
  margin-left: 20px;
  margin-top: 5px;
}

em {
  line-height: 100%;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: "Oswald", sans-serif;
  margin: 1rem auto;
  padding-bottom: 10px;
  padding-top: 20px;
}

h3.title {
  color: #131633;
  font-size: 32px;
  margin-bottom: 35px;
  text-align: center;
  text-transform: capitalize;
}
hr {
  background-color: gray;
  border: 0;
  height: 2px;
  margin: 20px auto;
  width: 150px;
}
/*----------------------------------------
  Dark Mode
  ---------------------------------------- */
body.dark-mode,
body.dark-mode main * {
  background: rgb(45, 45, 45);
  color: #f5f5f5;
}
body.dark-mode a {
  color: #f38322;
}
body.dark-mode .postfooter a {
  color: white;
}
body.dark-mode img {
  opacity: 0.7;
}

body.dark-mode img:hover {
  opacity: 1;
}

body.dark-mode .title {
  opacity: 0.8;
}

body.dark-mode tr:nth-child(even) {
  background-color: gray;
  color: white;
}
body.dark-mode tr:nth-child(even):hover,
body.dark-mode tr:hover {
  background-color: black;
  color: white;
}
/*----------------------------------------
  Title
  ---------------------------------------- */
.title {
  background-color: #f38322;
  border-radius: 15px;
  color: white;
  text-align: center;
  text-shadow: -2px 0 black, 0 2px black, 2px 0 black, 0 -2px black;
  width: 100%;
}
.subtitle {
  font-size: 1rem;
  margin: 1rem auto;
  padding: 1rem auto;
  text-align: center;
  width: 100%;
}
.subtitle p {
  font-style: oblique 15deg;
}
/*----------------------------------------
  Introduction
  ---------------------------------------- */
.introduction {
  font-size: 1.5rem;
  font-style: oblique 15deg;
  margin: 1rem auto;
  min-height: 3rem;
  position: relative;
  text-align: center;
}
@media only screen and (max-width: 800px) {
  .introduction {
    font-size: 1rem;
  }
}

/*----------------------------------------
  Content
  ---------------------------------------- */

.content {
  background-color: rgb(255, 248, 235);
  margin: 0 auto;
  padding: 1rem 8vw;
  width: 70vw;
}

body.dark-mode .content {
  background-color: rgb(59, 59, 59);
}

@media only screen and (max-width: 800px) {
  .content {
    padding: 0.1rem 0.5rem;
    width: 100vw;
  }
}

/*----------------------------------------
  Share buttons
  ---------------------------------------- */
.share-button {
  align-items: center;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  margin: auto;
  width: 100%;
}
.share-button a {
  display: inline-flex;
}

/*----------------------------------------
  Table style
  ---------------------------------------- */
th,
td {
  border-bottom: 1px solid #ddd;
  margin: auto;
  padding: 8px;
  text-align: left;
  width: 80vw;
}

th {
  background-color: rgb(94, 94, 94);
  color: white;
}

tr:nth-child(even) {
  background-color: #f2f2f2;
}

tr:hover {
  background-color: gray;
  color: #fff;
}

/*----------------------------------------
  flickr style
  ---------------------------------------- */
.flickr-album {
  overflow: scroll;
  position: relative;
}
.flickr-iframe {
  display: flex;
  height: auto;
  margin: 2px auto;
  min-height: 400px;
  overflow: scroll;
  position: relative;
  width: 100%;
}
.fa-flickr {
  background-color: #f38322;
  border-radius: 20px;
  color: white;
  margin: 0.6rem auto;
  padding: 0.5rem 1rem;
  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
}
.fa-flickr:hover {
  opacity: 0.6;
}

body.dark-mode .fa-flickr {
  opacity: 0.8;
}
body.dark-mode .fa-flickr:hover {
  opacity: 1;
}

@media only screen and (max-width: 800px) {
  .flickr-iframe {
    /* max-height: 300px; */
    min-height: 50vh;
  }
}

/*----------------------------------------
  Thumbnail style
  ---------------------------------------- */

.thumbnail-single {
  align-items: center;
  background-size: contain;
  display: flex;
  height: auto;
  justify-content: center;
  margin: 1rem auto;
  text-align: center;
  width: auto;
}

.thumbnail-single img {
  background-color: #f38322;
  border-radius: 20px;
  border-style: none;
  height: auto;
  width: 100%;
}

@media only screen and (max-width: 800px) {
  .thumbnail-single img {
    border-radius: 0px;
    width: 100vw;
  }
}
/*----------------------------------------
  HEADER
  ---------------------------------------- */
header {
  align-items: center;
  background: rgba(4, 39, 78, 1);
  color: #fff;
  display: flex;
  justify-content: center;
  padding: 0px 20px;
  position: relative;
  width: 100%;
  z-index: 10;
}

body.dark-mode header {
  background: rgba(4, 39, 78, 0.7);
}

body.dark-mode header .active {
  background-color: rgb(7, 80, 163);
}

header a:not(.logo) {
  align-items: center;
  color: white;
  cursor: pointer;
  float: left;
  opacity: 1;
  padding: 30px 15px;
  text-decoration: none;
  width: 100%;
}

header a:hover {
  background-color: rgb(7, 80, 163);
  border-radius: 50px;
  opacity: 1;
  transition: 0.4s;
}

header ul li {
  display: inline-block;
  font-size: 1.3rem;
}

header nav {
  flex-direction: row;
  font-size: 1rem;
  justify-content: flex-end;
  visibility: visible;
}

#current-language {
  display: inline-block;
  margin: 0 0;
  position: relative;
}

.other-language {
  display: none;
  margin: 0 0;
  position: relative;
  visibility: hidden;
}

.undoer-language {
  background-color: rgb(7, 80, 163);
  display: none;
  font-size: 1rem;
}

:target > .undoer-language {
  display: flex;
}
:target .current-language {
  display: none;
}

:target ~ .other-language {
  display: inline-block;
  visibility: visible;
}
/* ... */

